--- a/src/index.html
+++ b/src/index.html
@@ -6,21 +6,6 @@
   <script src="javascripts/renderer/index.js" type="text/javascript"></script>
 </head>
 <body>
-  <div class="message">
-    <div id="setup">
-      <div id="title">Setup Master Password</div>
-      <input type="password" id="setup_password" />
-      <input type="button" onClick="setupPassword()" value="Send" />
-    </div>
-    <div id="prompt">
-      <div id="title">Enter Master Password</div>
-      <input type="password" id="enter_password" />
-      <input type="button" onClick="enterPassword()" value="Send" />
-      <div id="invalid"></div>
-    </div>
-    <div id="app">
-      <div id="title">Swifty App</div>
-    </div>
-  </div>
+  <div id="root"></div>
 </body>
 </html>
