--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
   <script src="javascripts/renderer/index.js" type="text/javascript"></script>
 </head>
 <body>
+  <div class="draggable"></div>
   <div id="root"></div>
 </body>
 </html>
