Reorganize src code

--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title></title>
-  <script src="javascripts/renderer/index.js" type="text/javascript"></script>
+  <script src="index.js" type="text/javascript"></script>
 </head>
 <body>
   <div class="draggable"></div>
