--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title></title>
-  <script src="index.js" type="text/javascript"></script>
-</head>
-<body>
-  <div class="draggable"></div>
-  <div id="root"></div>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <title></title>
+    <script src="index.js" type="text/javascript"></script>
+    <meta
+      http-equiv="Content-Security-Policy"
+      content="default-src 'none'; img-src 'self'"
+    />
+  </head>
+  <body>
+    <div class="draggable"></div>
+    <div id="root"></div>
+  </body>
 </html>
